# magix

./: CMakeLists.txt  README.md  conanfile.txt  intersection.vtp  magix.sh  magix_current.vtp  magix_field.vts  magix_grid_polygons.vtp  magix_points.vtp  vtk_magnetic_field.vtp  vtk_sum_current.vtp  vtk_x_curr.vtu
docs/: Makefile  conf.py  make.bat
include/local/: fields.h  filament.h  geometry.h  globals.h  grid.h  layers.h  points.h  polygons.h  read.h  sys.h  tools.h  vtk_functions.h
src/: CMakeLists.txt  bicubic.cpp  biot_savart.cpp  clipper.cpp  geometry.cpp  get_all_examples.cpp  grid_old.cpp  images.cpp  lic.cpp  main.cpp  mergeSort.cpp  polygons.cpp  read.cpp  tools.cpp  vtk_field.cpp  vtk_grid.cpp  vtk_structure.cpp
tests/ex3/: Jimag1_0.mat  Jimag2_0.mat  Jimag3_0.mat  Jimag4_0.mat  Jimag5_0.mat  Jimag6_0.mat  Jmag1_0.mat  Jmag2_0.mat  Jmag3_0.mat  Jmag4_0.mat  Jmag5_0.mat  Jmag6_0.mat  Jreal6_0.mat  ex3.cir  ex3.gds  fa.txt  fastout.out  fieldcur.out  fxb.txt  fyb.txt  fzb.txt  instructions.txt  ix.cur  ixman3.ldf  jdensity.txt  lman.inp  lman3.dxf  lman3.inp  matrix_I.txt  matrix_v.txt  mesh.fil  runme.bat  sol.txt  sol_ffh.txt  sol_tth.txt  solver_field_x_out.txt  solver_field_y_out.txt  solver_field_z_out.txt  solver_out.txt
tests/line/: Jimag1_0.mat  Jimag2_0.mat  Jimag4_0.mat  Jimag5_0.mat  Jmag1_0.mat  Jmag4_0.mat  Jmag5_0.mat  Jreal1_0.mat  fastout.out  fieldcur.out  fyb.txt  fzb.txt  inductex  ix.cur  ix_license.txt  jdensity.txt  line.gds  lman.inp  lman1.inp  matrix_I.txt  matrix_v.txt  mesh.fil  sol.txt  solver_field_x_out.txt  solver_out.txt  (+2 more)
(+193 files in other folders)
